\name{NEWS}
\alias{NEWS}
\title{NEWS file for the toy SimpFort package}

\section{Version 0.0.1 (2018-12-19)}{
  \itemize{
    \item Initial version.
  }
}