@@ -1,3 +1,5 @@
+PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
+
 C_OBJS = fortloopc.o
 FT_OBJS = fortloopf.o
 
