@@ -2,6 +2,12 @@
 \alias{NEWS}
 \title{NEWS file for the toy SimpFort package}
 
+\section{Version 0.0.2 (2021-02-09)}{
+  \itemize{
+    \item Add .Fortran interface
+  }
+}
+
 \section{Version 0.0.1 (2018-12-19)}{
   \itemize{
     \item Initial version.
